# poc

./: Jenkinsfile  Makefile  README.md  docker-compose.yml
backend/: Makefile  README.md  pyproject.toml
backend/app/: run.py
backend/app/app/: __init__.py
backend/app/app/controller/: campaign.py
backend/app/app/model/: __init__.py
backend/tests/: conftest.py  test_main.py
data/: campaign.csv  campaign_type.csv  department.csv  family_category.csv  kpi_fact.csv  product.csv  promo_mechanic.csv  section.csv  subfamily.csv  supplier.csv
docker/: Dockerfile.api  Dockerfile.db  Dockerfile.static  entrypoint.sh  gunicorn_conf.py  schema_code.sql
frontend/: .eslintrc.js  Makefile  README.md  package-lock.json  package.json
frontend/src/: App.jsx  App.scss  App.test.jsx  Vars.scss  config.js  config.test.js  theme.scss
frontend/src/actions/: HATEOASActions.js  campaignActions.js  campaignActions.test.js  filterActions.js  filterActions.test.js  navigationActions.js  navigationActions.test.js  userActions.js  userActions.test.js
frontend/src/constants/: HATEOASConstants.js  campaignConstants.js  navigationConstants.js  userConstants.js
frontend/src/reducers/: curryReducers.js  curryReducers.test.js  entityReducer.js  entityReducer.test.js  filterReducer.js  filterReducer.test.js  genericReducer.js  genericReducer.test.js  loginReducer.js  loginReducer.test.js  navigationReducer.js  navigationReducer.test.js  rootReducer.js
infrastructure/jenkins/: README.md
infrastructure/terrafrom/: README.md  dev_parameters.tfvars  main.tf
(+113 files in other folders)
