[tool.poetry]
name = "api"
version = "0.1.0"
description = "MAF API POC"
authors = ["Eugene Yunak <yyunak@softserveinc.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
marshmallow-sqlalchemy = "^0.16.0"
Flask-SQLAlchemy = "^2.3"
Flask-Migrate = "^2.3"
flask-cors = "^3.0"
flask-monitor = "^0.2.6"
flask_testing = "^0.7.1"
Flask-Script = "^2.0"
flask-marshmallow = "^0.9.0"
flask-restplus = "^0.12.1"
SQLAlchemy = "^1.2"
pyjwt = "^1.7"
pyyaml = "^3.13"
apispec = "^1.0.0"
flask-swagger-ui = "^3.18.0"
Flask-BasicAuth = "^0.2.0"
marshmallow = "^3.0.0b8"
apispec-webframeworks = "^0.3.0"
psycopg2-binary = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
